11th commit fixed spacing

--- a/main.css
+++ b/main.css
@@ -1,6 +1,10 @@
+
+p{
+  margin: 0;  
+}
 #box{
-    height: 100vh;
-    width:100%;
+height: 100vh;
+width:100%;
 display:grid;
 grid-template-columns: .5fr 1fr 1fr 1fr 1fr 1fr .5fr;
 grid-template-rows: 1fr .5fr 1fr 1fr 1fr 1fr 1fr;
@@ -10,6 +14,7 @@ background:url("images/blue\ background.jpg");
 background-repeat: no-repeat;
 background-size: cover;
 border: solid;
+grid-row-gap: 0;
 
 }
 
@@ -111,6 +116,9 @@ border: solid;
     grid-column: 3/4;
     border: solid;
     border-radius: 10px;
+    font-size: 50px;
+
+
 
 }
 .c4{
@@ -118,6 +126,9 @@ border: solid;
     grid-column: 3/4;
     border: solid;
     border-radius: 10px;
+    font-size: 50px;
+
+
 
 }
 .c5{
@@ -125,6 +136,9 @@ border: solid;
     grid-column: 3/4;
     border: solid;
     border-radius: 10px;
+    font-size: 50px;
+
+
 
 
 }
@@ -133,6 +147,9 @@ border: solid;
  grid-column: 4/5; 
  border: solid;
  border-radius: 10px;
+ font-size: 50px;
+
+
 
 
 }
@@ -141,6 +158,9 @@ border: solid;
     grid-column: 4/5; 
     border: solid;
     border-radius: 10px;
+    font-size: 50px;
+
+
 
 
 }
@@ -149,6 +169,9 @@ border: solid;
     grid-column: 4/5; 
     border: solid;
     border-radius: 10px;
+    font-size: 50px;
+
+
 
 
 }
@@ -157,6 +180,9 @@ border: solid;
     grid-column: 4/5; 
     border: solid;
     border-radius: 10px;
+    font-size: 50px;
+
+
 
 
 }
@@ -165,6 +191,9 @@ border: solid;
     grid-column: 4/5; 
     border: solid;
     border-radius: 10px;
+    font-size: 50px;
+
+
 
 
 }
@@ -173,6 +202,9 @@ border: solid;
     grid-column: 5/6;
     border: solid;
     border-radius: 10px;
+    font-size: 50px;
+
+
 
 }
 .m2{
@@ -180,6 +212,9 @@ border: solid;
     grid-column: 5/6;
     border: solid;
     border-radius: 10px;
+    font-size: 50px;
+
+
 
 
 }
@@ -188,6 +223,9 @@ border: solid;
     grid-column: 5/6;
     border: solid;
     border-radius: 10px;
+    font-size: 50px;
+
+
 
 
 }
@@ -196,6 +234,10 @@ border: solid;
     grid-column: 5/6;
     border: solid;
     border-radius: 10px;
+    font-size: 50px;
+
+
+
 
 
 }
@@ -204,6 +246,10 @@ border: solid;
     grid-column: 5/6;
     border: solid;
     border-radius: 10px;
+    font-size: 50px;
+
+
+
 
 
 }
@@ -212,6 +258,10 @@ border: solid;
     grid-column: 6/7;
     border: solid;
     border-radius: 10px;
+    font-size: 50px;
+
+
+
     
 }
 .mo2{
@@ -219,6 +269,10 @@ border: solid;
     grid-column: 6/7;
     border: solid;
     border-radius: 10px;
+    font-size: 50px;
+
+
+
 
 
 }
@@ -227,7 +281,8 @@ border: solid;
     grid-column: 6/7;
     border: solid;
     border-radius: 10px;
-    ;
+    font-size: 50px;
+    
 
 
 }
@@ -236,6 +291,8 @@ border: solid;
     grid-column: 6/7;
     border: solid;
     border-radius: 10px;
+    font-size: 50px;
+
 
 
 }
@@ -244,6 +301,8 @@ border: solid;
     grid-column: 6/7;
     border: solid;
     border-radius: 10px;
+    font-size: 50px;
+
 
 
 
